--- a/src/main/resources/valintaperusteet-ui.properties
+++ b/src/main/resources/valintaperusteet-ui.properties
@@ -3,5 +3,4 @@ valintaperusteet-ui.valintaperuste-service-url.rest=http://localhost:8180\:8180/
 #valintaperusteet-ui.valintaperuste-service-url.rest=/valintaperusteet-service/
 valintaperusteet-ui.koodisto-service-url.rest=https://itest-virkailija.oph.ware.fi/koodisto-service/rest/
 valintaperusteet-ui.tarjona-service-url.rest = https://itest-virkailija.oph.ware.fi/tarjonta-service/rest/
-
-TARJONTA_URL_BASE
+valintaperusteet-ui.valintalaskentakoostepalvelu-service-url.rest = http://localhost:8180\:8180/valintalaskentakoostepalvelu/
