VT-456: Käyttöoikeudet kuntoon

--- a/pom.xml
+++ b/pom.xml
@@ -87,24 +87,24 @@
 
     <build>
         <finalName>${project.artifactId}</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jslint-maven-plugin</artifactId>
-                <version>1.0.1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>jslint</goal>
-                        </goals>
-                        <configuration>
-                            <sourceJsFolder>${project.basedir}/src/main/webapp/js</sourceJsFolder>
-                            <failOnIssues>false</failOnIssues>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
+        <!--<plugins>-->
+            <!--<plugin>-->
+                <!--<groupId>org.codehaus.mojo</groupId>-->
+                <!--<artifactId>jslint-maven-plugin</artifactId>-->
+                <!--<version>1.0.1</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<goals>-->
+                            <!--<goal>jslint</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<sourceJsFolder>${project.basedir}/src/main/webapp/js</sourceJsFolder>-->
+                            <!--<failOnIssues>false</failOnIssues>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
+        <!--</plugins>-->
     </build>
 
     <profiles>
