--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>fi.vm.sade.valintaperusteet</groupId>
         <artifactId>ui</artifactId>
-        <version>5.0.3</version>
+        <version>5.1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
     </parent>
 
