VT-609: Valintaryhmälle organisaatioiden tallennus

--- a/src/main/resources/valintaperusteet-ui.properties
+++ b/src/main/resources/valintaperusteet-ui.properties
@@ -4,3 +4,4 @@ valintaperusteet-ui.valintaperuste-service-url.rest=http://localhost:8180/valint
 valintaperusteet-ui.koodisto-service-url.rest=https://itest-virkailija.oph.ware.fi/koodisto-service/rest/
 valintaperusteet-ui.tarjona-service-url.rest = https://itest-virkailija.oph.ware.fi/tarjonta-service/rest/
 valintaperusteet-ui.valintalaskentakoostepalvelu-service-url.rest = http://localhost:8180/valintalaskentakoostepalvelu/
+valintaperusteet-ui.organisaatio-service-url = https://itest-virkailija.oph.ware.fi/organisaatio-service/
