--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 		"gulp-concat": "~2.1.7",
 		"gulp-uglify": "~0.2.1",
 		"run-sequence": "~0.3.5",
-		"gulp-clean": "0.2.4"
+		"gulp-clean": "0.2.4",
+		"gulp-livereload": "1.2.0",
+		"gulp-watch": "0.5.2"
 	}
 }
