--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,15 @@
 {
 	"name": "valintaperusteet",
 	"dependencies": {
-		"angular": "~1.2.10",
-		"angular-animate": "~1.2.10",
-		"angular-route": "~1.2.10",
-		"angular-resource": "~1.2.10",
+		"angular": "1.2.14",
+		"angular-animate": "1.2.14",
+		"angular-route": "1.2.14",
+		"angular-resource": "1.2.14",
 		"angular-bootstrap": "0.10.0",
 		"jquery": "2.1.0",
 		"jquery-ui": "latest",
-		"underscore": "1.6.0"
+		"underscore": "1.6.0",
+		"jquery.i18n.properites": "1.2.0"
 
 	},
 	"devDependencies": {
