--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
 		"jquery": "2.1.0",
 		"jquery-ui": "latest",
 		"underscore": "1.6.0",
-		"jquery.i18n.properites": "1.2.0"
+		"jquery.i18n.properites": "1.2.0",
+		"angular-breadcrumbs-simple": "0.0.5"
 
 	},
 	"devDependencies": {
