--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "gulp-karma": "0.0.4",
     "karma-jasmine": "~0.2.2",
     "karma-chrome-launcher": "~0.1.2",
-    "karma-firefox-launcher": "~0.1.3"
+    "karma-firefox-launcher": "~0.1.3",
+
+    "karma-phantomjs-launcher": "0.1.4"
   }
 }
