--- a/bower.json
+++ b/bower.json
@@ -6,10 +6,10 @@
 		"angular-route": "1.2.16",
 		"angular-resource": "1.2.16",
 		"angular-bootstrap": "0.10.0",
-		"jquery": "2.1.0",
+        "angular-translate": "2.1.0",
+        "jquery": "2.1.0",
 		"jquery-ui": "latest",
-		"underscore": "1.6.0",
-		"jquery.i18n.properites": "1.2.0"
+		"underscore": "1.6.0"
 	},
 	"devDependencies": {
 		"angular-mocks": "~1.2.16",
