--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,9 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>${project.artifactId}</finalName>
+    </build>
 
     <profiles>
         <profile>
@@ -108,7 +111,6 @@
             <!--</activation>-->
             <id>test</id>
             <build>
-                <finalName>${project.artifactId}</finalName>
 
                 <plugins>
                     <plugin>
