--- a/src/main/resources/valintaperusteet-ui.properties
+++ b/src/main/resources/valintaperusteet-ui.properties
@@ -5,3 +5,4 @@ valintaperusteet-ui.koodisto-service-url.rest=https://itest-virkailija.oph.ware.
 valintaperusteet-ui.tarjona-service-url.rest = https://itest-virkailija.oph.ware.fi/tarjonta-service/rest/
 valintaperusteet-ui.valintalaskentakoostepalvelu-service-url.rest = http://localhost:8180/valintalaskentakoostepalvelu/
 valintaperusteet-ui.organisaatio-service-url = https://itest-virkailija.oph.ware.fi/organisaatio-service/
+valintaperusteet-ui.lokalisointi-service-url = https://itest-virkailija.oph.ware.fi/lokalisointi/
