--- a/bower.json
+++ b/bower.json
@@ -5,14 +5,14 @@
 		"angular-animate": "1.2.16",
 		"angular-route": "1.2.16",
 		"angular-resource": "1.2.16",
-		"angular-bootstrap": "0.10.0",
+		"angular-bootstrap": "0.11.0",
         "angular-translate": "2.1.0",
         "jquery": "2.1.0",
 		"jquery-ui": "latest",
 		"underscore": "1.6.0"
 	},
 	"devDependencies": {
-		"angular-mocks": "~1.2.16",
-		"angular-scenario": "~1.2.16"
+		"angular-mocks": "1.2.16",
+		"angular-scenario": "1.2.16"
 	}
 }
