--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,18 @@
 {
-	"name": "valintaperusteet",
-	"dependencies": {
-		"angular": "1.2.16",
-		"angular-animate": "1.2.16",
-		"angular-route": "1.2.16",
-		"angular-resource": "1.2.16",
-		"angular-bootstrap": "0.11.0",
-        "angular-translate": "2.1.0",
-        "jquery": "2.1.0",
-		"jquery-ui": "latest",
-		"underscore": "1.6.0"
-	},
-	"devDependencies": {
-		"angular-mocks": "1.2.16",
-		"angular-scenario": "1.2.16"
-	}
+  "name": "valintaperusteet",
+  "dependencies": {
+    "angular": "1.2.18",
+    "angular-animate": "1.2.18",
+    "angular-route": "1.2.18",
+    "angular-resource": "1.2.18",
+    "angular-bootstrap": "0.11.0",
+    "angular-translate": "2.1.0",
+    "jquery": "2.1.0",
+    "jquery-ui": "latest",
+    "lodash": "2.4.1"
+  },
+  "devDependencies": {
+    "angular-mocks": "1.2.18",
+    "angular-scenario": "1.2.18"
+  }
 }
