--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "devDependencies": {
-    "gulp": "~3.5.2",
-    "gulp-util": "~2.2.14",
-    "gulp-concat": "~2.1.7",
-    "gulp-uglify": "~0.2.1",
-    "run-sequence": "~0.3.5",
-    "gulp-clean": "0.2.4",
-    "gulp-livereload": "1.2.0",
-    "gulp-watch": "0.5.2",
+    "gulp": "3.8.5",
+    "gulp-util": "2.2.19",
+    "gulp-concat": "2.2.0",
+    "gulp-uglify": "0.2.1",
+    "run-sequence": "0.3.6",
+    "gulp-clean": "0.3.1",
+    "gulp-livereload": "2.1.0",
+    "gulp-watch": "0.6.8",
     "gulp-karma": "0.0.4",
-    "karma-jasmine": "~0.2.2",
+    "karma-jasmine": "0.2.2",
     "karma-chrome-launcher": "~0.1.2",
     "karma-firefox-launcher": "~0.1.3",
-
     "karma-phantomjs-launcher": "0.1.4"
   }
 }
