--- a/pom.xml
+++ b/pom.xml
@@ -102,60 +102,66 @@
 
     <build>
         <finalName>${project.artifactId}</finalName>
+        <!--<plugins>-->
+        <!--<plugin>-->
+        <!--<groupId>org.codehaus.mojo</groupId>-->
+        <!--<artifactId>jslint-maven-plugin</artifactId>-->
+        <!--<version>1.0.1</version>-->
+        <!--<executions>-->
+        <!--<execution>-->
+        <!--<goals>-->
+        <!--<goal>jslint</goal>-->
+        <!--</goals>-->
+        <!--<configuration>-->
+        <!--<sourceJsFolder>${basedir}/src/main/webapp/js</sourceJsFolder>-->
+        <!--<failOnIssues>false</failOnIssues>-->
+        <!--</configuration>-->
+        <!--</execution>-->
+        <!--</executions>-->
+        <!--</plugin>-->
+        <!--</plugins>-->
+        <plugins>
+            <plugin>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <version>0.0.14</version>
+
+                <executions>
+
+                    <execution>
+                        <id>install node and npm</id>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                        </goals>
+                        <configuration>
+                            <nodeVersion>v0.10.26</nodeVersion>
+                            <npmVersion>1.3.24</npmVersion>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>npm install</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>install</arguments>
+                        </configuration>
+                    </execution>
+
+
+                    <execution>
+                        <id>Gulp build</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>gulp</goal>
+                        </goals>
+                    </execution>
+
+                </executions>
+            </plugin>
+
+        </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <!--<activation>-->
-                <!--<activeByDefault>true</activeByDefault>-->
-            <!--</activation>-->
-            <id>test</id>
-            <build>
-
-                <plugins>
-                    <plugin>
-                        <groupId>com.github.eirslett</groupId>
-                        <artifactId>frontend-maven-plugin</artifactId>
-                        <version>0.0.14</version>
-
-                        <executions>
-
-                            <execution>
-                                <id>install node and npm</id>
-                                <goals>
-                                    <goal>install-node-and-npm</goal>
-                                </goals>
-                                <configuration>
-                                    <nodeVersion>v0.10.26</nodeVersion>
-                                    <npmVersion>1.3.24</npmVersion>
-                                </configuration>
-                            </execution>
-
-                            <execution>
-                                <id>npm install</id>
-                                <goals>
-                                    <goal>npm</goal>
-                                </goals>
-                                <configuration>
-                                    <arguments>install</arguments>
-                                </configuration>
-                            </execution>
-
-
-                            <execution>
-                                <id>Gulp build</id>
-                                <phase>test</phase>
-                                <goals>
-                                    <goal>gulp</goal>
-                                </goals>
-                            </execution>
-
-                        </executions>
-                    </plugin>
-                </plugins>
-
-            </build>
-        </profile>
-    </profiles>
 
 </project>
