--- a/src/main/resources/valintaperusteet-ui.properties
+++ b/src/main/resources/valintaperusteet-ui.properties
@@ -6,3 +6,4 @@ valintaperusteet-ui.tarjona-service-url.rest = https://itest-virkailija.oph.ware
 valintaperusteet-ui.valintalaskentakoostepalvelu-service-url.rest = http://localhost:8180/valintalaskentakoostepalvelu/
 valintaperusteet-ui.organisaatio-service-url = https://itest-virkailija.oph.ware.fi/organisaatio-service/
 valintaperusteet-ui.lokalisointi-service-url = https://itest-virkailija.oph.ware.fi/lokalisointi/
+valintalaskenta-ui.hakemus-ui-url = https://itest-virkailija.oph.ware.fi/haku-app/
