--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-livereload": "2.1.0",
     "gulp-watch": "0.6.8",
     "gulp-karma": "0.0.4",
+      "karma": "0.12.16",
     "karma-jasmine": "0.2.2",
     "karma-chrome-launcher": "~0.1.2",
     "karma-firefox-launcher": "~0.1.3",
