VT-909 AngularJS Unit ja E2E testien luominen

--- a/pom.xml
+++ b/pom.xml
@@ -109,24 +109,6 @@
 
     <build>
         <finalName>${project.artifactId}</finalName>
-        <!--<plugins>-->
-        <!--<plugin>-->
-        <!--<groupId>org.codehaus.mojo</groupId>-->
-        <!--<artifactId>jslint-maven-plugin</artifactId>-->
-        <!--<version>1.0.1</version>-->
-        <!--<executions>-->
-        <!--<execution>-->
-        <!--<goals>-->
-        <!--<goal>jslint</goal>-->
-        <!--</goals>-->
-        <!--<configuration>-->
-        <!--<sourceJsFolder>${basedir}/src/main/webapp/js</sourceJsFolder>-->
-        <!--<failOnIssues>false</failOnIssues>-->
-        <!--</configuration>-->
-        <!--</execution>-->
-        <!--</executions>-->
-        <!--</plugin>-->
-        <!--</plugins>-->
         <plugins>
             <plugin>
                 <groupId>com.github.eirslett</groupId>
@@ -137,6 +119,7 @@
 
                     <execution>
                         <id>install node and npm</id>
+                        <phase>generate-resources</phase>
                         <goals>
                             <goal>install-node-and-npm</goal>
                         </goals>
@@ -148,6 +131,7 @@
 
                     <execution>
                         <id>npm install</id>
+                        <phase>generate-resources</phase>
                         <goals>
                             <goal>npm</goal>
                         </goals>
@@ -156,13 +140,20 @@
                         </configuration>
                     </execution>
 
-
                     <execution>
-                        <id>Gulp build</id>
-                        <phase>test</phase>
+                        <id>javascript tests</id>
                         <goals>
-                            <goal>gulp</goal>
+                            <goal>karma</goal>
                         </goals>
+
+                        <!-- optional: the default plase is "test". Some developers
+                        choose to run karma in the "integration-test" phase. -->
+                        <phase>test</phase>
+
+                        <configuration>
+                            <!-- optional: the default is "karma.conf.js" in your working directory -->
+                            <karmaConfPath>src/test/ui/valintaperusteet.conf.js</karmaConfPath>
+                        </configuration>
                     </execution>
 
                 </executions>
