yritys korjata bamboon e2etestit mitkä toimii lokaalisti ajettuna

--- a/pom.xml
+++ b/pom.xml
@@ -188,11 +188,9 @@
                             <value>file:///${basedir}/src/test/resources/log4j.properties</value>
                         </systemProperty>
                     </systemProperties>
-                    <webApp>
-                        <descriptor>src/test/webapp/WEB-INF/web.xml</descriptor>
-                    </webApp>
                     <webAppConfig>
                         <contextPath>/${project.artifactId}</contextPath>
+                        <descriptor>${basedir}/src/test/webapp/WEB-INF/web.xml</descriptor>
                     </webAppConfig>
                     <stopPort>21079</stopPort>
                     <stopKey>STOP</stopKey>
