--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "test":  "*",
     "mocha-phantomjs": "*"
   },
+  "dependencies": {
+    "test":  "*",
+    "mocha-phantomjs": "*"
+  },
   "scripts": {
     "test": "mocha-phantomjs -R dot http://localhost:18180/valintaperusteet-ui/test/runner.html"
   }
