Added ftp properties configurable instead of hardcode for kela transfer

--- a/src/test/resources/valintaperusteet-ui-vagrant.properties
+++ b/src/test/resources/valintaperusteet-ui-vagrant.properties
@@ -16,6 +16,7 @@ host.ldap=kehitys-virkailija.oph.ware.fi
 host.virkailija=kehitys-virkailija.oph.ware.fi
 kela.ftp.username=TODO
 kela.ftp.password=TODO
+kela.ftp.parameters=TODO
 kela.ftp.host=ftp1.kela.fi
 kela.ftp.port=21
 kela.ftp.protocol=ftps
