BUG-987 : Make showing tila hakijalle configurable

--- a/src/test/resources/valintaperusteet-ui-vagrant.properties
+++ b/src/test/resources/valintaperusteet-ui-vagrant.properties
@@ -139,6 +139,7 @@ valintalaskenta-ui.tarjona-service-url.rest = https://${host.virkailija}/tarjont
 valintalaskenta-ui.hakemus-service-url.rest = https://${host.virkailija}/
 valintalaskenta-ui.hakemus-ui-url= https://${host.virkailija}/haku-app
 valintalaskenta-ui.koodisto-service-url.rest= https://${host.virkailija}/koodisto-service/rest/
+valintalaskenta-ui.sijoitteluntulokset.show-tila-hakijalle=true
 
 #EXCEL EXPORTS
 valintalaskenta-ui.valintalaskenta-service-url.excel = https://${host.virkailija}/valintalaskenta-laskenta-service/
