Set sijoittelu-service.hakukohdeCache.populate

--- a/src/test/resources/valintaperusteet-ui-vagrant.properties
+++ b/src/test/resources/valintaperusteet-ui-vagrant.properties
@@ -157,6 +157,7 @@ sijoittelu-service.mongodb.dbname=sijoitteludb
 sijoittelu-service.mongodb.uri=${mongodb.virkailija.uri}/${sijoittelu-service.mongodb.dbname}
 sijoittelu-service.swagger.basepath=https://${host.virkailija}/sijoittelu-service/resources/
 sijoittelu.maxAjojenMaara=20
+sijoittelu-service.hakukohdeCache.populate=true
 
 #VALINTAPERUSTEET-SERVICE
 valintaperusteet-service.swagger.basepath=https://${host.virkailija}/valintaperusteet-service/resources
