Use new custom CAS filter from java-utils
It should take care of initing the CAS request with correct service URL.
Consequently, the count of modules requiring generic-common is down
to three.

--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>fi.vm.sade.generic</groupId>
-            <artifactId>generic-common</artifactId>
+            <groupId>fi.vm.sade.java-utils</groupId>
+            <artifactId>opintopolku-cas-servlet-filter</artifactId>
         </dependency>
         <dependency>
               <groupId>org.jasig.cas.client</groupId>
