Fix swagger base paths
https://github.com/swagger-api/swagger-core/blob/2d5bad879bb3f18fec4fda7d098d516f36bb37b8/modules/swagger-jaxrs/src/main/java/io/swagger/jaxrs/config/BeanConfig.java#L193-L201

--- a/src/test/resources/valintaperusteet-ui-vagrant.properties
+++ b/src/test/resources/valintaperusteet-ui-vagrant.properties
@@ -114,13 +114,13 @@ valintalaskentakoostepalvelu.sijoittelu.rest.url=https://${host.virkailija}/sijo
 valintalaskentakoostepalvelu.valintalaskenta.rest.url=${host.ilb}/valintalaskenta-laskenta-service/resources
 valintalaskentakoostepalvelu.koodiService.url=https://${host.virkailija}/koodisto-service/services/koodiService
 valintalaskentakoostepalvelu.dokumenttipalvelu.rest.url=https://${host.virkailija}/dokumenttipalvelu-service/resources
-valintalaskentakoostepalvelu.swagger.basepath=https://${host.virkailija}/valintalaskentakoostepalvelu/resources
+valintalaskentakoostepalvelu.swagger.basepath=/valintalaskentakoostepalvelu/resources
 valintalaskentakoostepalvelu.valintaperusteet.rest.url=${host.ilb}/valintaperusteet-service/resources
 valintalaskentakoostepalvelu.parametriservice.rest.url=https://${host.virkailija}/ohjausparametrit-service/api
 valintalaskentakoostepalvelu.valintaperusteet.ilb.url=${host.ilb}/valintaperusteet-service/resources
 
 #DOKUMENTTIPALVELU
-dokumenttipalvelu-service.swagger.basepath=https://${host.virkailija}/dokumenttipalvelu-service/resources
+dokumenttipalvelu-service.swagger.basepath=/dokumenttipalvelu-service/resources
 
 #VALINTAPERUSTEET-UI
 valintaperusteet-ui.valintaperuste-service-url.rest=https://${host.virkailija}/valintaperusteet-service/
@@ -149,25 +149,25 @@ valintalaskenta-ui.sijoittelu-service-url.excel = https://${host.virkailija}/sij
 #VALINTALASKENTA-SERVICE
 valintalaskenta-laskenta-service.mongodb.dbname=valintalaskentadb
 valintalaskenta-laskenta-service.mongodb.uri=${mongodb.virkailija.uri}/${valintalaskenta-laskenta-service.mongodb.dbname}
-valintalaskenta-laskenta-service.swagger.basepath=https://${host.virkailija}/valintalaskenta-laskenta-service/resources
+valintalaskenta-laskenta-service.swagger.basepath=/valintalaskenta-laskenta-service/resources
 
 
 #SIJOITTELU-SERVICE
 sijoittelu-service.mongodb.dbname=sijoitteludb
 sijoittelu-service.mongodb.uri=${mongodb.virkailija.uri}/${sijoittelu-service.mongodb.dbname}
-sijoittelu-service.swagger.basepath=https://${host.virkailija}/sijoittelu-service/resources/
+sijoittelu-service.swagger.basepath=/sijoittelu-service/resources/
 sijoittelu.maxAjojenMaara=20
 sijoittelu-service.hakukohdeCache.populate=true
 sijoittelu-service.hakukohdeDao.batchSize=300
 
 #VALINTAPERUSTEET-SERVICE
-valintaperusteet-service.swagger.basepath=https://${host.virkailija}/valintaperusteet-service/resources
+valintaperusteet-service.swagger.basepath=/valintaperusteet-service/resources
 
 #SEURANTA
 seuranta.mongodb.dbname=seurantadb
 seuranta.mongodb.uri=${mongodb.virkailija.uri}/${seuranta.mongodb.dbname}
 valintalaskentakoostepalvelu.seuranta.rest.url=https://${host.virkailija}/seuranta-service/resources
-seuranta-service.swagger.basepath=https://${host.virkailija}/seuranta-service/resources
+seuranta-service.swagger.basepath=/seuranta-service/resources
 seuranta-service.rest.url=https://${host.virkailija}/seuranta-service/resources
 
 #ORGANISAATIO
