Get groupEmailId for letter batch

--- a/src/test/resources/valintaperusteet-ui-vagrant.properties
+++ b/src/test/resources/valintaperusteet-ui-vagrant.properties
@@ -102,6 +102,7 @@ valintalaskentakoostepalvelu.valintalaskentaService.url=https://${host.virkailij
 valintalaskentakoostepalvelu.valintaTulosService.url=https://${host.virkailija}/valintalaskenta-laskenta-service/services/valintatietoService
 valintalaskentakoostepalvelu.sijoitteluService.url=https://${host.virkailija}/sijoittelu-service/services/sijoitteluService
 valintalaskentakoostepalvelu.viestintapalvelu.url=https://${host.virkailija}/viestintapalvelu
+valintalaskentakoostepalvelu.ryhmasahkoposti.url=https://${host.virkailija}/ryhmasahkoposti-service
 valintalaskentakoostepalvelu.tarjontaService.url=https://${host.virkailija}/tarjonta-service/services/tarjontaPublicService
 valintalaskentakoostepalvelu.organisaatioService.url=https://${host.virkailija}/organisaatio-service/services/organisaatioService
 valintalaskentakoostepalvelu.organisaatioService.rest.url=https://${host.virkailija}/organisaatio-service/rest
