Set property flag for saving sijoitteluajo to valintarekisteridb.

--- a/src/test/resources/valintaperusteet-ui-vagrant.properties
+++ b/src/test/resources/valintaperusteet-ui-vagrant.properties
@@ -159,6 +159,7 @@ sijoittelu-service.mongodb.uri=${mongodb.virkailija.uri}/${sijoittelu-service.mo
 sijoittelu-service.swagger.basepath=/sijoittelu-service/resources/
 sijoittelu.maxAjojenMaara=20
 sijoittelu-service.hakukohdeCache.populate=true
+sijoittelu-service.saveSijoitteluToValintarekisteri=true
 sijoittelu-service.hakukohdeDao.batchSize=300
 
 #VALINTAPERUSTEET-SERVICE
