OY-61 haaran rebase masteriin suurten refaktorointien jälkeen

--- a/src/test/resources/valintaperusteet-ui-vagrant.properties
+++ b/src/test/resources/valintaperusteet-ui-vagrant.properties
@@ -70,6 +70,7 @@ cas.service.valintarekisteri=https://${host.virkailija}/valintarekisteri
 cas.service.viestintapalvelu=https://${host.virkailija}/viestintapalvelu
 cas.service.suoritusrekisteri=https://${host.virkailija}/suoritusrekisteri
 cas.service.authentication-service=https://${host.virkailija}/authentication-service
+cas.service.oppijanumerorekisteri-service=https://${host.virkailija}/oppijanumerorekisteri-service
 customAttribute.webservice.url.backend=https://${host.virkailija}/authentication-service/services/customAttributeService
 dokumenttipalvelu.mongodb.dbname=dokumenttidb
 dokumenttipalvelu.mongodb.uri=${mongodb.virkailija.uri}/${dokumenttipalvelu.mongodb.dbname}
