Cas intercepted ataru client.

--- a/src/test/resources/valintaperusteet-ui-vagrant.properties
+++ b/src/test/resources/valintaperusteet-ui-vagrant.properties
@@ -55,6 +55,7 @@ cas.user-search-filter=(|(mail\={0})(uid\={0}))
 cas.service.dokumenttipalvelu=https://${host.virkailija}/dokumenttipalvelu-service
 cas.service.seuranta=https://${host.virkailija}/seuranta-service
 cas.service.haku-service=https://${host.virkailija}/haku-app
+cas.service.ataru=https://${host.virkailija}/lomake-editori
 cas.service.koodisto-service=https://${host.virkailija}/koodisto-service
 cas.service.organisaatio-service=https://${host.virkailija}/organisaatio-service
 cas.service.sijoittelu-service=https://${host.virkailija}/sijoittelu-service
