OK-185: Laskentakaavaan "Näytetään OHP:ssä"
* OK-185: Add new fields to kaavat in valintaperusteet-ui

* Refactor old properties and commented out code

* Fix typo in model name

* Fix logic error in validation

* OK-185: Add oma_opintopolku to valintaperusteet db

* Fix broken db tests

* OK-185: Add omaopintopolku to rest of the dtos

* OK-185: Remove omaopintopolku default value

* OK-185: Fix missing value mapping

* Reformat file that mixed spaces and tabs

* Change api-doc descriptions

--- a/src/test/resources/valintaperusteet-ui-vagrant.properties
+++ b/src/test/resources/valintaperusteet-ui-vagrant.properties
@@ -6,14 +6,11 @@
 #
 
 # Aseta vähintään nämä ympäristökohtaiset arvot
-activemq.brokerurl=failover:tcp://kehitys-virkailija.oph.ware.fi:61616
-activemq.jmxurl=service:jmx:rmi:///jndi/rmi://kehitys-virkailija.oph.ware.fi:1099/jmxrmi
 auth.mode=dev
 env.loglevel=INFO
-host.cas=kehitys-virkailija.oph.ware.fi
-host.ilb=https://kehitys-virkailija.oph.ware.fi
-host.ldap=kehitys-virkailija.oph.ware.fi
-host.virkailija=kehitys-virkailija.oph.ware.fi
+host.cas=virkailija.untuvaopintopolku.fi
+host.ldap=ldap.ldap.untuvaopintopolku.fi
+host.virkailija=virkailija.untuvaopintopolku.fi
 kela.ftp.username=TODO
 kela.ftp.password=TODO
 kela.ftp.parameters=TODO
@@ -22,7 +19,7 @@ kela.ftp.port=21
 kela.ftp.protocol=ftps
 kela.ftp.path=/OPHSIIRROT/inbox
 mongodb.virkailija.uri=mongodb://vagrant:vagrant@172.16.42.42:27017
-server.name=kehitys-virkailija.oph.ware.fi
+server.name=localhost
 
 # Oletusarvoja
 accessRight.webservice.url.backend=https\://${host.virkailija}/authentication-service/services/accessRightService
@@ -83,7 +80,9 @@ ldap.cache.size=10000
 ldap.data.dir=${user.home}/data
 ldap.filter.people=uid\=%u
 ldap.index.cache.size=10000
+ldap.manager.userdn=cn=admin,ou=People,dc=opintopolku,dc=fi
 ldap.manager-dn=${ldap.manager.userdn}
+ldap.manager-password=${ldap.manager.password}
 ldap.search.base.people=ou=People,dc=opintopolku,dc=fi
 ldap.url=ldap://${host.ldap}
 ldap.url.with.base=ldap\://${host.ldap}/dc\=opintopolku,dc\=fi
