--- a/src/main/resources/valintaperusteet-ui.properties
+++ b/src/main/resources/valintaperusteet-ui.properties
@@ -1,9 +1,10 @@
 #Angularin takia urlien pitaa olla tassa muodossa, muuten resource syo portin parametrina
 valintaperusteet-ui.valintaperuste-service-url.rest=http://localhost:8180/valintaperusteet-service/
-#valintaperusteet-ui.valintaperuste-service-url.rest=/valintaperusteet-service/
-valintaperusteet-ui.koodisto-service-url.rest=https://itest-virkailija.oph.ware.fi/koodisto-service/rest/
-valintaperusteet-ui.tarjona-service-url.rest = https://itest-virkailija.oph.ware.fi/tarjonta-service/rest/
 valintaperusteet-ui.valintalaskentakoostepalvelu-service-url.rest = http://localhost:8180/valintalaskentakoostepalvelu/
-valintaperusteet-ui.organisaatio-service-url = https://itest-virkailija.oph.ware.fi/organisaatio-service/
-valintaperusteet-ui.lokalisointi-service-url = https://itest-virkailija.oph.ware.fi/lokalisointi/
-valintalaskenta-ui.hakemus-ui-url = https://itest-virkailija.oph.ware.fi/haku-app/
+
+virkailija.base.path=virkailija.untuvaopintopolku.fi
+valintaperusteet-ui.koodisto-service-url.rest=https://${virkailija.base.path}/koodisto-service/rest/
+valintaperusteet-ui.tarjona-service-url.rest = https://${virkailija.base.path}/tarjonta-service/rest/
+valintaperusteet-ui.organisaatio-service-url = https://${virkailija.base.path}/organisaatio-service/
+valintaperusteet-ui.lokalisointi-service-url = https://${virkailija.base.path}/lokalisointi/
+valintalaskenta-ui.hakemus-ui-url = https://${virkailija.base.path}/haku-app/
