Revert "VTKU-28 : Upgrade to Java 11"
This reverts commit 6786f75f497a3da2721f3be7fc79deb9b73f677a.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 language: java
 
 jdk:
-- openjdk11
+- oraclejdk8
 
 services:
 - docker
@@ -32,7 +32,7 @@ script:
 - mv target/valintaperusteet-ui.war $DOCKER_BUILD_DIR/artifact/valintaperusteet-ui.war
 - cp -vr src/main/resources/oph-configuration $DOCKER_BUILD_DIR/config/
 
-- export BASE_IMAGE="baseimage-war:jdk11"
+- export BASE_IMAGE="baseimage-war:master"
 - ./ci-tools/common/pull-image.sh
 - ./ci-tools/build/build-war.sh $ARTIFACT_NAME
 
