--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
         <spring.version>5.1.5.RELEASE</spring.version>
         <spring.security.version>4.2.11.RELEASE</spring.security.version>
 
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
         <maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
     </properties>
 
@@ -341,9 +344,10 @@ buildTtime=${maven.build.timestamp}
                 <inherited>true</inherited>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.1</version>
                 <configuration>
-                    <release>11</release>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -376,7 +380,7 @@ buildTtime=${maven.build.timestamp}
             </plugin>
           <plugin>
               <artifactId>maven-enforcer-plugin</artifactId>
-              <version>3.0.0-M2</version>
+              <version>1.4.1</version>
               <executions>
                 <execution>
                   <id>enforce-versions</id>
@@ -387,7 +391,7 @@ buildTtime=${maven.build.timestamp}
                   <configuration>
                     <rules>
                       <requireJavaVersion>
-                        <version>11</version>
+                        <version>[1.8,)</version>
                       </requireJavaVersion>
                       <dependencyConvergence />
                     </rules>
