--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,69 +7,73 @@ on:
       - '**.md'
 
 jobs:
-  test-and-build:
+
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Cache local Maven repository
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-            ${{ runner.os }}-maven-  
+            ${{ runner.os }}-maven-
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Cache local npm repository
+        uses: actions/cache@v3
         with:
-          java-version: '11'
-          distribution: 'temurin'
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-      - uses: dcodeIO/setup-node-nvm@master
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
         with:
-          node-version: v10.22.0
+          java-version: '21'
+          distribution: 'corretto'
 
       - uses: szenius/set-timezone@v1.0
         with:
           timezoneLinux: "Europe/Helsinki"
 
-      - name: Run Spotless
-        run: ./bin/run-spotless-in-travis.sh
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 10
 
-      - name: Run ESLint
+      - name: Build
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          git clone https://github.com/Opetushallitus/ci-tools.git
+          source ci-tools/common/setup-tools.sh
           node -v
           npm -v
-          npm install
-          ./bin/run-eslint-in-travis.sh
+          mvn --settings settings.xml clean spotless:check package -B -Dbranch=${GITHUB_REF_NAME} -Drevision=${GITHUB_SHA} -DbuildNumber=${GITHUB_RUN_NUMBER}
 
-      - name: Build with Maven
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          GITHUB_TOKEN: ${{ github.token }}
-        run: mvn clean package -B -Dbranch=${GITHUB_REF_NAME} -Drevision=${GITHUB_SHA} -DbuildNumber=${GITHUB_RUN_NUMBER}
-
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         id: restore-build
         with:
-          path: |
-            target
+          path: target
           key: ${{ github.sha }}
 
-  deploy-container:
-    needs: test-and-build
+
+  build-and-deploy-container:
+    needs: [build]
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         id: restore-build
         with:
-          path: |
-            target
+          path: target
           key: ${{ github.sha }}
 
       - name: Build and deploy Docker container
@@ -78,12 +82,13 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
+          export ARTIFACT_NAME="valintaperusteet-ui"
           git clone https://github.com/Opetushallitus/ci-tools.git
           source ci-tools/common/setup-tools.sh
-          export ARTIFACT_NAME="valintaperusteet-ui"
-          mv target/valintaperusteet-ui-*allinone.jar $DOCKER_BUILD_DIR/artifact/${ARTIFACT_NAME}.jar
+          mv target/valintaperusteet-ui-*-SNAPSHOT.jar $DOCKER_BUILD_DIR/artifact/${ARTIFACT_NAME}.jar
           cp -vr src/main/resources/oph-configuration $DOCKER_BUILD_DIR/config/
-          export BASE_IMAGE="baseimage-fatjar-openjdk11:master"
+          export BASE_IMAGE="baseimage-fatjar-openjdk21:master"
           ./ci-tools/common/pull-image.sh
           ./ci-tools/github-build/build-fatjar.sh $ARTIFACT_NAME
           ./ci-tools/github-build/upload-image.sh $ARTIFACT_NAME
+          ./ci-tools/common/clean-docker-build-dir.sh
