Korjattu autentikaatiossa käytettävää osoitetta

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ server:
     threads:
       max: 20
 
-valintalaskenta-ui:
+valintaperusteet-ui:
   uses-ssl-proxy: false
   disable-same-site-cookie: false
 
